--- a/src/Components/HomeCarousel/index.css
+++ b/src/Components/HomeCarousel/index.css
@@ -2,6 +2,7 @@
   display: flex !important;
   justify-content: center;
   margin-bottom: 20px;
+  z-index: -1;
 }
 
 .custom-dots li button:before {
