--- a/src/Components/HomeCarousel/index.css
+++ b/src/Components/HomeCarousel/index.css
@@ -32,3 +32,19 @@
   opacity: 0.5;
   font-size: 8px;
 }
+
+.slick-arrow {
+  position: absolute;
+  bottom: 0;
+  transform: translateY(-50%);
+  z-index: 2;
+  cursor: pointer;
+}
+
+.slick-prev {
+  left: 10px;
+}
+
+.slick-next {
+  right: 10px;
+}
