--- a/src/Components/HomeCarousel/index.css
+++ b/src/Components/HomeCarousel/index.css
@@ -1,3 +1,16 @@
+.slider-container {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .slider-container {
+    width: 768px;
+    margin: auto;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15); /* Add shadow here */
+    border-radius: 16px;
+  }
+}
+
 .custom-dots {
   display: flex !important;
   justify-content: center;
