--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0px;
   
 }
-
+/* 
 p {
   user-select: none; 
 }
@@ -13,7 +13,7 @@ h1{
 
 h2{
   user-select: none;
-}
+} */
 
 body {
   margin: 0;
